tweaking border width values for inner content to avoid weird whitespace around rounded corners

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ a:hover{
 
 .inner-box {
   background-color: rgb(87, 81, 207);
-  border: 20px solid rbg(55, 67, 212);
+  border: 10px solid rbg(55, 67, 212);
   border-radius: 20px;
   padding: 20px;
   font-size: 30px;
